Fixed header z-index

--- a/website/website_style.css
+++ b/website/website_style.css
@@ -90,6 +90,7 @@ nav {
     position: fixed;
     width: 100%;
     background: white;
+    z-index: 99999;
 }
 
 .nav-logo {
